methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    // Write your code here
  
def pasUnMur() {if (!estFaceMur() && !estDosMur() )}
  
	while (!estSurBiscuit() ) {avance();recule()

  
    if (getCouleurSol()==Color.green) {avance()}
                             
  	else {gauche() }
  
  
  
    prendBiscuit() }

}